# llama-cpp-agent

./: .gitignore  .pylintrc  LICENSE  README.md  ReadMe.md  example_agent.py  example_agent2.py  example_agent_auto_coder.py  example_agent_auto_coder_2.py  example_agent_core_memory.py  example_agent_models.py  example_agent_models_auto_coder.py  example_agent_retrieval_memory.py  example_agent_structured_output.py  example_book_dataset_creation.py  example_dataframe_creation.py  example_embodied_function_calling.py  example_function_call_models.py  example_function_calling.py  example_knowledge_graph.py  example_multi_file_generation.py  example_output.txt  example_simple.py  example_task_specifier.py  example_two_agent_discussion.py  install llama-cpp-python cublas.txt  knowledge_graph.gv  knowledge_graph2.gv  knowledge_graph3.gv  knowledge_graph4.gv  knowledge_graph5.gv  knowledge_graph6.gv  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml  python-ci.yml  python-publish.yml
agent_auto_coder_auto_planner_output/: README.md  chatbot_frontend.html  chatbot_frontend_plan.md  completion_criteria.md  scripts.js  styles.css
agent_auto_coder_result/workspace/: Dockerfile.txt  chatbot.css  chatbot.html  chatbot.js  docker.yaml  package.json.txt  server.js  server.json
agent_workspace_old/: HelloUSA.txt  index.html  script.js
dev/: HelloUSA.txt  USARap.txt
dev_2023.12.30_20-27-58/: plan.json
docs/: agent_chains.md  agents-api-reference.md  api-reference.md  chat_history-api-reference.md  function-calling-agent.md  function-calling-api-reference.md  get-started.md  grammar-api-reference.md  index.md  knowledge-graph-example.md  llama_index_tool_use.md  manual-function-calling.md  manual_function_calling_with_python_function.md  map_chain.md  output-parser-api-reference.md  parallel_function_calling.md  provider-api-reference.md  rag.md  sequential_chain.md  settings-api-reference.md  simple-chat-example.md  structured-output-example.md
examples/: example_advanced_function_call_models.py  example_advanced_function_calling.py  example_agent.py  example_agent_auto_coder.py  example_agent_core_memory.py  example_agent_models.py  example_agent_models_auto_coder.py  example_agent_retrieval_memory.py  example_agent_structured_output.py  example_book_dataset_creation.py  example_dataframe_creation.py  example_embodied_function_calling.py  example_function_calling_agent.py  example_function_calling_agent2.py  example_knowledge_graph.py  example_manual_function_calling.py  example_multi_file_generation.py  example_python_function_grammar.py  example_simple.py  example_simple_function_calling.py  example_simple_llama_cpp_server.py  example_task_specifier.py  example_two_agent_discussion.py  function_calling_agent.json  generation_settings.json  mixtral-8x7b-instruct-v0.1.json  openhermes-2.5-mistral-7b-16k.Q8_0.json  openhermes-2.5-mistral-7b.Q8_0.json  orca_2_13b_16k.json  output.txt  parallel_function_calling.py
llama_cpp_agent/: default_tools.py  function_call_tools.py  llm_agent.py  llm_prompt_template.py  memory_tools.py  messages_formatter.py  output_parser.py  structured_output_agent.py
tests/: function_calling.py  providers.py  test_function_calling.py
(+212 files in other folders)
