[build-system]
requires = [  "setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-cpp-agent"
version = "0.0.17"
description = "A framework for building LLM based AI agents with llama-cpp-python."

readme = "ReadMe.md"
dependencies = [
    "llama-cpp-python>=0.2.26",
    "pydantic>=2.5.3",
    "requests==2.31.0"
]

requires-python = ">=3.10"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent" ]
[[project.authors]]
name = "Maximilian Winter"
email = "maximilian.winter.91@gmail.com"


[project.optional-dependencies]
retrieval_memory = ["chromadb", "SQLAlchemy", "numpy", "scipy"]

[project.urls]
Homepage = "https://github.com/Maximilian-Winter/llama-cpp-agent"
"Bug Tracker" = "https://github.com/Maximilian-Winter/llama-cpp-agent/issues"

[tool.setuptools.packages.find]
where = ["src"]

