[build-system]
requires = [  "setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-cpp-agent"
version = "0.2.9"
description = "A framework for building LLM based AI agents with llama.cpp."

readme = "ReadMe.md"
dependencies = [
    "llama-cpp-python>=0.2.60",
    "pydantic>=2.5.3",
    "requests>=2.31.0",
    "docstring_parser",
    "aiohttp"
]

requires-python = ">=3.10"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent" ]
[[project.authors]]
name = "Maximilian Winter"
email = "maximilian.winter.91@gmail.com"


[project.optional-dependencies]
agent_memory = ["chromadb", "SQLAlchemy", "numpy", "scipy"]
rag = ["ragatouille"]
vllm_provider = ["openai"]
mixtral_agent = ["mistral-common"]

[project.urls]
Homepage = "https://github.com/Maximilian-Winter/llama-cpp-agent"
"Bug Tracker" = "https://github.com/Maximilian-Winter/llama-cpp-agent/issues"

[tool.setuptools.packages.find]
where = ["src"]

